updating week 2 and 3

--- a/02/Week2.ipynb
+++ b/02/Week2.ipynb
@@ -10,7 +10,103 @@
    "source": [
     "# Week 2\n",
     "\n",
-    "## Data manipulation and visualization with python"
+    "## Data manipulation and visualization with python\n",
+    "\n",
+    "### emma test!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Emma\\\\ejardas\\\\spring2020\\\\02'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "he says this (above) is the best way to check your path. then he goes on to talk about pathlib. this is a magic by the way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Path().home() / \"biof509\" / \"spring2020\" / \"02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datafile = p / \"winequality-red.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Emma/biof509/spring2020/02/winequality-red.csv')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datafile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Emma\\\\ejardas\\\\spring2020\\\\02'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
    ]
   },
   {
@@ -128,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -194,13 +290,13 @@
     }
    ],
    "source": [
-    "print(a[slice(0, 3)])\n",
+    "print(a[slice(0, 3)]) # he said don't do this, use []\n",
     "print(type(slice(0, 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -216,7 +312,7 @@
     }
    ],
    "source": [
-    "print(a[::2])"
+    "print(a[::2]) # this gives you every other element. u can also do every 3rd, 4th"
    ]
   },
   {
@@ -243,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -259,8 +355,15 @@
     }
    ],
    "source": [
-    "from math import sin\n",
+    "from math import sin \n",
     "print([sin(x) for x in range(4)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "^^list comprehension."
    ]
   },
   {
@@ -284,6 +387,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "can use map to apply sin to the second thing (range)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -302,6 +412,13 @@
    "source": [
     "a.append(6)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "he doesn't like using these list  functions - they have no  output. it can lead you to accidentally do bad things."
    ]
   },
   {
@@ -342,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -359,7 +476,7 @@
     }
    ],
    "source": [
-    "from array import array\n",
+    "from array import array #\"skip this, it's just an example. use numpy\"\n",
     "from statistics import mean\n",
     "\n",
     "al = array('l', [1, 2, 3, 4, 5])\n",
@@ -429,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -442,7 +559,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -488,13 +605,13 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np #fixing the prob on the above line with false\n",
     "\n",
     "np.isclose(0.1 + 0.1 + 0.1, 0.3)"
    ]
@@ -5087,9 +5204,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
