updating week 4 notes again

--- a/04/Week4.ipynb
+++ b/04/Week4.ipynb
@@ -1541,7 +1541,8 @@
     }
    ],
    "source": [
-    "# indices of 3 closest neighbors\n",
+    "# indices of 3 closest neighbors (this is the index of them - e.g.number order. the 3 nearest neighbors \n",
+    "# are the 0st, 241st, and 62nd are neighbors\n",
     "indices"
    ]
   },
@@ -2051,6 +2052,26 @@
     "    - When would you do one or another?\n",
     "    - Mean = use mean if there are continuous variables. ~ regression.\n",
     "    - Mode = use mode if there are dichotomous variables. ~ classification. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If: K = 1, this means it takes only one neighbor. There's nothing to average/mode out, so it just will take the neighbor's label as the prediction. E.g., the neighbor's label is the prediction. \n",
+    "\n",
+    "If: K = N, it takes all other values as the nearest neighbors. Everybody in the world is a neighbor! This results in giving us the null model, where the model is always predicting the average of y, for every single prediction of y."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalization\n",
+    "Should you always normalize for KNN?\n",
+    "It's a good idea because we're calculating distances, which means the scaling can really affect those calculations. :) \n",
+    "\n",
+    "For tree-based models, normalization is not as important."
    ]
   },
   {
